# proyecto-analisis-de-algoritmos

./: .gitignore  CMakeLists.txt  CMakePresets.json
knapsack/: knapsack.cpp  knapsackEntero.cpp  main2.cpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  app.cpp  graph.cpp  knapsack.cpp  main.cpp  node.cpp  subsetsum.cpp
src/include/: app.h  graph.h  imageData.h  knapsack.h  node.h  subsetsum.h  windowRenderer.h
src/windows/: graphWindow.cpp  knapsackWindow.cpp  subsetsumWindow.cpp  templateWindow.cpp  windowRenderer.h
subset_sum/: main_subset_sum.cpp  subset_sum.cpp
